# flitwemmmmm

./: .gitignore  CREDITS  Kiretecossstap  README.md  data  flitwemmmmm.cabal  flitwemmmmm.hs  new
resources/static/: screen.css
resources/templates/: index.tpl
src/: Application.hs  Generator.hs  Site.hs
