Name:                flitwemmmmm
Version:             0.1
Synopsis:            An IDM track name generator.
Description:         Most IDM artists use track names that look like someone
                     mashed on the keyboard. So this program builds up a noddy
                     bigram language model from a file with one real IDM track
                     name per line, and generates a plausible track name from
                     the model. The output is largely indistinguishable from
                     the genuine article.
License:             OtherLicense
License-file:        LICENSE
Author:              Will Thompson
Maintainer:          will@willthompson.co.uk
Homepage:            https://gitorious.org/flitwemmmmm
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6

Source-repository head
  Type:     git
  location: git://gitorious.org/flitwemmmmm/flitwemmmmm.git

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable flitwemmmmm
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    -- Standard Snap stuff
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    heist >= 0.5 && < 0.6,
    MonadCatchIO-transformers >= 0.2.1 && < 0.3,
    mtl >= 2 && < 3,
    snap == 0.4.*,
    snap-core == 0.4.*,
    snap-server == 0.4.*,
    text >= 0.11 && < 0.12,
    time >= 1.1 && < 1.3,
    xmlhtml == 0.1.*,

    -- Our stuff
    containers,
    MonadRandom,
    transformers

  extensions: TypeSynonymInstances MultiParamTypeClasses

  if flag(development)
    cpp-options: -DDEVELOPMENT
    build-depends: hint >= 0.3.2 && < 0.4
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans

